--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,13 @@
+NDigiDoc version 3.10 release notes
+--------------------------------------
+Changes compared to ver 3.9
+
+- source code moved from svn to git
+history also copied to git repository.
+- dependent libraries log4net and clrsecurity removed from source code.
+Please see README-DevInfo.txt how to download and install them prior to
+building the library.
+
 NDigiDoc version 3.9 release notes
 --------------------------------------
 Changes compared to ver 1.0
